force-app/main/default/objects/OffreContrainte__c/OffreContrainte__c.object-meta.xml
<CustomObject>
    <label>Contrainte</label>
    <nameField>
        <displayFormat>ct-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contraintes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>