force-app/main/default/objects/OffreContrainte__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IncludeOffreCoupon__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A Qualifier</fullName>
                <default>true</default>
                <label>A Qualifier</label>
            </value>
            <value>
                <fullName>Prioritaire</fullName>
            </value>
            <value>
                <fullName>Non-Prioritaire</fullName>
            </value>
            <value>
                <fullName>Cumulable</fullName>
            </value>
            <value>
                <fullName>Non-Cumulable</fullName>
            </value>
            <value>
                <fullName>Ignorer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>