force-app/main/default/objects/OffreContrainte__c/fields/ContrainteSur__c.field-meta.xml
<CustomField>
    <fullName>ContrainteSur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrainte Sur</label>
    <referenceTo>Offre__c</referenceTo>
    <relationshipLabel>Contraintes Par</relationshipLabel>
    <relationshipName>ContraintesPar</relationshipName>
    <type>Lookup</type>
</CustomField>