force-app/main/default/objects/OffreContrainte__c/fields/DateDebut__c.field-meta.xml
<CustomField>
    <fullName>DateDebut__c</fullName>
    <label>Date début</label>
    <type>DateTime</type>
</CustomField>