force-app/main/default/objects/OffreContrainte__c/fields/DateFin2__c.field-meta.xml
<CustomField>
    <fullName>DateFin2__c</fullName>
    <label>Date Fin2</label>
    <type>DateTime</type>
</CustomField>