force-app/main/default/objects/OffreContrainte__c/fields/DateFin__c.field-meta.xml
<CustomField>
    <fullName>DateFin__c</fullName>
    <label>Date Fin</label>
    <type>DateTime</type>
</CustomField>