force-app/main/default/objects/OffreContrainte__c/fields/IncludeOffreCoupon__c.field-meta.xml
<CustomField>
    <fullName>IncludeOffreCoupon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IncludeOffreCoupon</label>
    <type>Checkbox</type>
</CustomField>