force-app/main/default/objects/OffreContrainte__c/fields/Offre__c.field-meta.xml
<CustomField>
    <fullName>Offre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offre</label>
    <referenceTo>Offre__c</referenceTo>
    <relationshipLabel>Contraintes</relationshipLabel>
    <relationshipName>Contraintes</relationshipName>
    <type>Lookup</type>
</CustomField>